K8/Backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lucidsight

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend


    spec:
      containers:
        - name: backend
          image: lucidsight-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
