K8/Frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: lucidsight


spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend


    spec:
      containers:
        - name: frontend
          image: lucidsight-frontend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 80
