K8/Frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: lucidsight


spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


  type: ClusterIP
