K8/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lucidsight-ingress
  namespace: lucidsight


spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
